# local-movie-server

./: Readme.md  movie.py  parser.py  player.py  pyproject.toml  template.html  tmdb.py  utils.py
static/: script.js  style.css
