[project]
name = "test"
requires-python = ">=3.11"
version = "0.0.1"
authors = [{ name = "Leyuskc", email = "leyuskc@gmail.com" }]


[tool.pyright]
typeCheckingMode = "strict"
venv = ".venv"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
